Inputs zum Laufen fertig